Antes da aceleração do vídeo

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,12 @@ h1, h2, h3, h4 {
   font-family: "Roboto", sans-serif;
 }
 
+.main-left {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+}
+
 .section {
   height: 100vh;
   width: 100%;
@@ -22,7 +28,6 @@ h1, h2, h3, h4 {
 .background--one {
   background-size: contain;
 }
-
 .background--two {
   background-size: contain;
 }
