--- a/src/assets/sass/commons/sections.scss
+++ b/src/assets/sass/commons/sections.scss
@@ -5,8 +5,16 @@
 
 .background--one{
     background-size: contain;
+
+    & .block-section--one{}
 }
 
 .background--two{
     background-size: contain;
+
+    & .block-section--two{
+
+
+        & .text-block--two{}
+    }
 }
