--- a/src/assets/sass/commons/main.scss
+++ b/src/assets/sass/commons/main.scss
@@ -7,14 +7,24 @@ $fontFamilyDefault: 'Roboto', sans-serif;
   padding: 0;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body{
   background: $backgroundBlack;
   color: $fontColorWhite;
   font-family: $fontFamilyDefault;
 }
 
-h1, h2, h3, h4{
+h1, h2, h3, h4, h5, p, b, span{
   font-family: $fontFamilyDefault;
+}
+
+.container{
+
+  width: 75%;
+  margin: 0 auto;
 }
 
 .main-left{
@@ -22,3 +32,12 @@ h1, h2, h3, h4{
   left: 10px;
   bottom: 10px;
 }
+
+.footer-contain{
+  margin-top: calc(10px - 210px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: $fontFamilyDefault;
+}
+
